# wildlife-tracker-api

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: asgi.py  wsgi.py
config/settings/: local.py
tracker/: settings.py  urls.py
tracker/data/: species.py
tracker/management/commands/: create_herds.py
tracker/migrations/: 0001_initial.py  0002_rename_size_observation_family_size_and_more.py  0003_remove_observation_name.py
tracker/models/: __init__.py  abstract.py  event.py  family.py  herd.py  observation.py
tracker/serializers/: family.py  herd.py  observation.py
tracker/tests/api_tests/: herd.py  test_family.py  test_observation.py
tracker/views/: family.py  herd.py  observation.py
